debug prime number checker

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <button class= "btn btn-default" type="submit" name="button">Submit</button>
       </form>
       <div id="output3"></div>
+        <ul id="uloutput">
+
+        </ul>
     </div>
   </body>
 </html>
